# standalone-cython

./: .gitmodules  CMakeLists.txt  README.md
cmake/: UseCython.cmake
src/: CMakeLists.txt  greeter.pyx  main.c  main.c.in  pymain.pyx
